# tracker

./: BallDetection.cpp  BallDetection.h  CMakeLists.txt  ForegroundSegmenter.cpp  ForegroundSegmenter.h  Makefile  README.md  TrackerExceptions.h  VideoBackend.cpp  global.h  main.cpp  options.cfg
src/: BallDetection.cpp  BallDetection.h  BallDetection_David.cpp  Candidate.cpp  Candidate.h  Doxyfile  ForegroundSegmenter.cpp  ForegroundSegmenter.cu  ForegroundSegmenter.h  GridC.cpp  GridC.h  GridP.cpp  GridP.h  OptionParser.h  Path.cpp  Path.h  TrackerExceptions.h  VideoBackend.h  global.h  main.cpp  threading.cpp  threading.h
